change images to material font #4

--- a/src/components/about-room/about-room.pug
+++ b/src/components/about-room/about-room.pug
@@ -4,4 +4,4 @@ mixin about-room(items)
   .about-room
     each item in items
       .about-room__item
-        +about-room-item(item.src, item.title, item.text)
+        +about-room-item(item.icon, item.title, item.text)
