--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -16,5 +16,5 @@ mixin pagination()
           else
             a.pagination__link(class=link.active && "pagination__link_active" href="/mock-link")= link.pageNum
       li.pagination__item
-        a(class="pagination__link pagination__next" href="/mock-link")
+        a(class="pagination__link pagination__link_arrow_next" href="/mock-link") arrow_forward
     p.pagination__text 1 – 12 из 100+ вариантов аренды
