--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -25,14 +25,14 @@ mixin reservation-form(luxury)
           .reservation-form__prices-item-text
             |Сбор за услуги: скидка 2&nbsp;179₽
             .reservation-form__prices-item-info
-              img(class="reservation-form__info-icon" src=require("/src/assets/img/icons/info.svg"), alt="icon")
+              span.reservation-form__info-icon i
               span.reservation-form__tooltip подсказка
           span.reservation-form__prices-item-price 0₽
         .reservation-form__prices-item
           .reservation-form__prices-item-text
             |Сбор за дополнительные услуги
             .reservation-form__prices-item-info
-              img(class="reservation-form__info-icon" src=require("/src/assets/img/icons/info.svg"), alt="icon")
+              span.reservation-form__info-icon i
               span.reservation-form__tooltip подсказка
           span.reservation-form__prices-item-price 300₽
       .reservation-form__total
