--- a/src/components/room-card/room-card.pug
+++ b/src/components/room-card/room-card.pug
@@ -13,9 +13,9 @@ mixin room-card(obj)
         .room-card__slider-dot.js-room-card__slider-dot
       .room-card__slider-buttons
         button.room-card__slider-button.room-card__slider-button_direction_left.js-room-card__slider-button_direction_left
-          img(class="room-card__slider-button-image" src=require("/src/assets/img/icons/next-slide.svg"), alt="button-left")
+          |navigate_before
         button.room-card__slider-button.room-card__slider-button_direction_right.js-room-card__slider-button_direction_right
-          img(class="room-card__slider-button-image" src=require("/src/assets/img/icons/next-slide.svg"), alt="button-right")
+          |navigate_next
     .room-card__inner
       .room-card__info
         a(class="room-card__room-number-link" href="/room-details.html")
