--- a/src/components/subscription-field/subscription-field.pug
+++ b/src/components/subscription-field/subscription-field.pug
@@ -6,5 +6,4 @@ mixin subscription-field({ label = false, placeholder = "Email" } = {})
     .subscription-field__wrapper
       input(class="subscription-field__input" type="email"
         placeholder=placeholder autofocus=attributes.autofocus)
-      button(class="subscription-field__button" type="submit")
-        img(src=require("/src/assets/img/icons/arrow-purple.svg"), alt="subscribe button")
+      button(class="subscription-field__button" type="submit") arrow_forward
