--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -24,9 +24,9 @@ block variables
     ]
 
     const aboutRoomItems = [
-      {src: require("/src/assets/img/icons/insert-emoticon.svg"), title: "Комфорт", text: "Шумопоглощающие стены"},
-      {src: require("/src/assets/img/icons/location-city.svg"), title: "Удобство", text: "Окно в каждой из спален"},
-      {src: require("/src/assets/img/icons/whatshot.svg"), title: "Уют", text: "Номер оснащён камином"}
+      { icon: "insert_emoticon", title: "Комфорт", text: "Шумопоглощающие стены" },
+      { icon: "location_city", title: "Удобство", text: "Окно в каждой из спален" },
+      { icon: "whatshot", title: "Уют", text: "Номер оснащён камином "}
     ]
 block content
   .room-details
