--- a/src/components/about-room-item/about-room-item.pug
+++ b/src/components/about-room-item/about-room-item.pug
@@ -1,6 +1,6 @@
-mixin about-room-item(src, title, text)
+mixin about-room-item(icon, title, text)
   .about-room-item
-    img(class="about-room-item__img" src=src, alt="icon")
+    span.about-room-item__icon= icon
     span.about-room-item__title
       =title
     span.about-room-item__text
