--- a/src/components/about-room-item/about-room-item.scss
+++ b/src/components/about-room-item/about-room-item.scss
@@ -6,6 +6,16 @@
   justify-items: center;
   column-gap: 10px;
 
+  &__icon {
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+    @extend %material-icons;
+    font-size: 3rem;
+    background: $mainGradient;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
   &__title {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
@@ -23,10 +33,5 @@
     font-size: $mainFontSize;
     font-family: $mainFont;
     line-height: $largeLineHeight;
-  }
-
-  &__img {
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
   }
 }
