--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -49,13 +49,20 @@
     }
 
     &_arrow {
+      position: relative;
       width: 100%;
       max-width: 320px;
       padding: 0 20px;
       color: #fff;
-      background: url('/src/assets/img/icons/arrow-white.svg') 95% 50% no-repeat,
-        linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+      background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
       border-radius: 22px;
+
+      &::after {
+        @extend %material-icons;
+        position: absolute;
+        right: 10px;
+        content: 'arrow_forward';
+      }
 
       &:hover {
         color: #fff;
