--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -5,11 +5,11 @@ mixin date-dropdown({ label1, label2, container })
       .date-dropdown__header
         input(class='date-dropdown__input js-date-dropdown__input' readonly placeholder='ДД.ММ.ГГГГ')
         button(class="date-dropdown__expand-button js-date-dropdown__expand-button" type="button")
-          img(src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
+          |expand_more
     if label2
       .date-dropdown__wrapper
         .date-dropdown__label= label2
         .date-dropdown__header
           input(class='date-dropdown__input js-date-dropdown__input' readonly placeholder='ДД.ММ.ГГГГ')
           button(class="date-dropdown__expand-button js-date-dropdown__expand-button" type="button")
-            img(src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
+            |expand_more
