--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -217,9 +217,11 @@
     right: 0;
     width: 44px;
     height: 100%;
+    color: $dark-shade-50;
     background: none;
     border: 0;
     cursor: pointer;
+    @extend %material-icons;
   }
 
   &__input {
@@ -229,6 +231,7 @@
     border: 1px solid $dark-shade-25;
     border-radius: 4px;
     cursor: pointer;
+    user-select: none;
     @extend %body-text;
 
     &:hover,
