--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -26,7 +26,7 @@
     @extend %label-text;
   }
 
-  &__text {
+  &__input {
     width: 100%;
     height: 44px;
     padding: 0 87px 0 15px;
@@ -35,6 +35,7 @@
     border: 0;
     outline: none;
     cursor: pointer;
+    user-select: none;
     @extend %body-text;
   }
 
@@ -89,23 +90,17 @@
     &-button {
       width: 30px;
       height: 30px;
-      border: 0;
+      color: $dark-shade-50;
+      font-weight: $mainFontWeight;
+      font-family: $mainFont;
+      background: none;
+      border: 1px solid $dark-shade-25;
       border-radius: 50%;
       cursor: pointer;
 
-      &_icon {
-        &_minus {
-          background: url('/src/assets/img/icons/minus.svg'), transparent;
-        }
-
-        &_plus {
-          background: url('/src/assets/img/icons/plus.svg'), transparent;
-        }
-      }
-
       &:disabled {
         cursor: default;
-        opacity: 0.3;
+        opacity: 0.38;
       }
     }
   }
@@ -115,10 +110,12 @@
     right: 0;
     width: 44px;
     height: 100%;
+    color: $dark-shade-50;
     background: none;
     border: 0;
     outline: none;
     cursor: pointer;
+    @extend %material-icons;
   }
 
   &__button-apply,
