--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -2,8 +2,9 @@ mixin expandable-checkbox-list({ label, list, container, expanded })
   .expandable-checkbox-list(class=container)
     .expandable-checkbox-list__wrapper.js-expandable-checkbox-list__wrapper
       span.expandable-checkbox-list__label= label
-      button.expandable-checkbox-list__button-expand.js-expandable-checkbox-list__button-expand(class=`${expanded && 'expandable-checkbox-list__button-expand_active'}`)
-        img(class="expandable-checkbox-list__button-icon" src=require("/src/assets/img/icons/expand-more.svg"), alt="expand")
+      button.expandable-checkbox-list__button-expand.js-expandable-checkbox-list__button-expand(
+        class=`${expanded && 'expandable-checkbox-list__button-expand_active'}`) expand_more
+
     ul.expandable-checkbox-list__items.js-expandable-checkbox-list__items(class=`${expanded && 'expandable-checkbox-list__items_active'}`)
       each item in checkboxList
         li.expandable-checkbox-list__item
