--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -59,39 +59,41 @@
 
     &-button {
       position: absolute;
+      top: 50%;
       width: 44px;
       height: 100%;
+      color: #ffffff;
       background: transparent;
-      border: 0;
-      border-top-left-radius: 4px;
-      border-bottom-left-radius: 4px;
-      visibility: hidden;
-      cursor: pointer;
-      opacity: 0;
-      transition: all 0.3s;
-    }
-
-    &-button:hover {
       background: linear-gradient(
         90deg,
         rgba(0, 0, 0, 0.5) 0%,
         rgba(0, 0, 0, 0) 99.99%,
         rgba(255, 255, 255, 0) 100%
       );
+      border: 0;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+      transform: translateY(-50%);
+      visibility: hidden;
+      cursor: pointer;
+      opacity: 0;
+      transition: all 0.3s;
+      @extend %material-icons;
     }
 
     &-button_direction {
       &_left {
-        top: 50%;
-        border: 0;
-        transform: translateY(-50%);
+        left: 0;
       }
 
       &_right {
-        top: 50%;
-        right: -1px;
-        border: 0;
-        transform: translateY(-50%) rotate(180deg);
+        right: 0;
+        background: linear-gradient(
+          270deg,
+          rgba(0, 0, 0, 0.5) 0%,
+          rgba(0, 0, 0, 0) 99.99%,
+          rgba(255, 255, 255, 0) 100%
+        );
       }
     }
 
