--- a/src/components/subscription-field/subscription-field.scss
+++ b/src/components/subscription-field/subscription-field.scss
@@ -36,10 +36,12 @@
   }
 
   &__button {
+    @extend %material-icons;
     position: absolute;
     right: 0;
     width: 44px;
     height: 44px;
+    color: $mainBrandColor;
     background: none;
     border: 0;
     cursor: pointer;
