--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -31,12 +31,13 @@
       min-height: 100vh;
       background: #fff;
       visibility: hidden;
-      opacity: 0;
-      transition: all 0.3s ease-in-out;
+      transition: all 1s ease-in-out;
+      clip-path: circle(100px at 90% -20%);
 
       &_active {
         visibility: visible;
-        opacity: 1;
+        clip-path: circle(1500px at 90% -20%);
+        pointer-events: all;
       }
     }
   }
@@ -46,7 +47,7 @@
   }
 
   &__navigation-item:not(:last-child) {
-    margin-right: 25px;
+    margin-right: 21px;
 
     @media screen and (max-width: $smDesktopWidth) {
       margin: 0;
