--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -5,10 +5,6 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
-
-    @media (max-width: $phoneWidth) {
-      padding: 0 10px;
-    }
   }
 
   &__pictures {
@@ -68,7 +64,7 @@
 
   &__info {
     display: grid;
-    grid-row-gap: 35px;
+    grid-row-gap: 32px;
     grid-column-gap: 70px;
     grid-template-rows: repeat(3, auto);
     grid-template-columns: minmax(200px, 291px) minmax(230px, 349px) minmax(330px, 380px);
@@ -95,11 +91,12 @@
     @media screen and (max-width: $phoneWidth) {
       grid-row: 1 / 2;
       grid-column: 1;
+      justify-self: center;
     }
   }
 
   &__about-room-title {
-    margin: 0 0 25px;
+    margin: 0 0 22px;
   }
 
   &__reviews {
@@ -134,6 +131,11 @@
     text-align: center;
   }
 
+  &__bullet-list-title {
+    margin-bottom: 18px;
+    padding-left: 20px;
+  }
+
   &__bullet-list {
     grid-row: 3 / 4;
     grid-column: 1 / 2;
@@ -142,11 +144,6 @@
       grid-row: 5 / 6;
       grid-column: 1;
     }
-  }
-
-  &__bullet-list-title {
-    margin-bottom: 18px;
-    padding-left: 20px;
   }
 
   &__cancel {
@@ -177,6 +174,7 @@
     @media screen and (max-width: $phoneWidth) {
       grid-row: 2 / 3;
       grid-column: 1;
+      justify-self: center;
     }
 
     &-title {
