--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -4,8 +4,8 @@
   grid-template-areas: '. aside content .';
   grid-template-columns: auto 266px minmax(320px, 835px) auto;
   width: 100%;
-  margin-top: 25px;
-  margin-bottom: 55px;
+  margin-top: 30px;
+  margin-bottom: 71px;
   column-gap: 60px;
 
   @media screen and (max-width: $tableWidth) {
@@ -35,7 +35,7 @@
   }
 
   &__range-slider {
-    margin-bottom: 25px;
+    margin-bottom: 26px;
   }
 
   &__checkbox-title {
@@ -55,12 +55,16 @@
     &-wrapper {
       display: flex;
       flex-direction: column;
-      row-gap: 15px;
+      row-gap: 10px;
     }
   }
 
+  &__checkbox + &__checkbox {
+    margin-bottom: 25px;
+  }
+
   &__comfort {
-    margin-bottom: 30px;
+    margin-bottom: 25px;
   }
 
   &__title {
@@ -77,7 +81,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
     width: 100%;
-    margin-bottom: 40px;
+    margin-bottom: 44px;
     column-gap: 12px;
     row-gap: 20px;
 
