--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -1,6 +1,6 @@
 mixin logo(text)
   .logo
-    a(class="logo__link" href='/landing-page.html')
+    a(class="logo__link" href='/')
       if (text)
         img(class="logo__img" src=require("/src/assets/img/icons/logo.svg"), alt="logo")
       else
