--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -3,10 +3,11 @@
   grid-auto-rows: auto;
   grid-template-areas: '. aside content .';
   grid-template-columns: auto 266px minmax(320px, 835px) auto;
+  justify-content: space-between;
   width: 100%;
-  margin-top: 30px;
-  margin-bottom: 71px;
-  column-gap: 60px;
+  max-width: 1275px;
+  margin: 30px auto 71px;
+  column-gap: 20px;
 
   @media screen and (max-width: $tableWidth) {
     grid-template-areas:
