--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -7,7 +7,7 @@ include /components/login-form/login-form
 include /components/room-card/room-card
 include /components/logo/logo
 block variables
-  -const title= "Cards"
+  -const title = "Cards"
 
 block content
   .cards
@@ -21,13 +21,33 @@ block content
           +registration-form()
       .cards__column
         .cards__item
-          +reservation-form('luxury')
+          +reservation-form({
+            luxury: true,
+            room: 888,
+            price: "9 990₽",
+            discount: "2&nbsp;179",
+            additionalService: "300"
+          })
         .cards__item
           +login-form()
       .cards__column
         .cards__item
           +date-dropdown({ label1: 'прибытие', container: 'js-cards-date-dropdown' })
         .cards__item.cards__item_size_s
-          +room-card({luxury: true, number: 888, price: "9 900₽", star: 5, reviews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',]})
+          +room-card({
+            luxury: true,
+            number: 888,
+            price: "9 900₽",
+            star: 5,
+            reviews: 145,
+            images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg',]
+          })
         .cards__item.cards__item_size_s
-          +room-card({luxury: false, number: 840, price: "9 900₽", star: 4, reviews: 65, images: ['room-2.jpg', 'room-1.jpg', 'room-2.jpg', 'room-1.jpg',]})
+          +room-card({
+            luxury: false,
+            number: 840,
+            price: "9 900₽",
+            star: 4,
+            reviews: 65,
+            images: ['room-2.jpg', 'room-1.jpg', 'room-2.jpg', 'room-1.jpg',]
+          })
