--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -44,13 +44,33 @@
 
   &__navigation-item {
     position: relative;
+
+    &:not(:last-child) {
+      margin-right: 21px;
+
+      @media screen and (max-width: $smDesktopWidth) {
+        margin: 0;
+      }
+    }
   }
 
-  &__navigation-item:not(:last-child) {
-    margin-right: 21px;
+  &__user-name {
+    position: relative;
+    margin-left: 20px;
+    color: $dark-shade-50;
+    line-height: $mainLineHeight;
+    text-decoration: none;
+    @extend %body-text;
 
-    @media screen and (max-width: $smDesktopWidth) {
-      margin: 0;
+    &::before {
+      position: absolute;
+      bottom: 50%;
+      left: -20px;
+      width: 1px;
+      height: 30px;
+      background-color: #e9e9ec;
+      transform: translateY(50%);
+      content: '';
     }
   }
 
@@ -116,40 +136,20 @@
       width: 12px;
       content: '';
     }
-  }
 
-  &__burger_active {
-    .header__burger-line {
-      left: 4px;
-      transform: rotate(-45deg);
-    }
+    &_active {
+      .header__burger-line {
+        left: 4px;
+        transform: rotate(-45deg);
+      }
 
-    .header__burger-line::before {
-      transform: rotate(90deg) translateY(6px);
-    }
+      .header__burger-line::before {
+        transform: rotate(90deg) translateY(6px);
+      }
 
-    .header__burger-line::after {
-      transform: rotate(90deg) translateY(-6px);
-    }
-  }
-
-  &__user-name {
-    position: relative;
-    margin-left: 20px;
-    color: $dark-shade-50;
-    line-height: $mainLineHeight;
-    text-decoration: none;
-    @extend %body-text;
-
-    &::before {
-      position: absolute;
-      bottom: 50%;
-      left: -20px;
-      width: 1px;
-      height: 30px;
-      background-color: #e9e9ec;
-      transform: translateY(50%);
-      content: '';
+      .header__burger-line::after {
+        transform: rotate(90deg) translateY(-6px);
+      }
     }
   }
 }
