--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -1,12 +1,6 @@
 .room-details {
   margin-bottom: 75px;
 
-  &__container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
-
   &__pictures {
     display: grid;
     grid-template-rows: repeat(2, 243px);
@@ -57,6 +51,12 @@
     }
   }
 
+  &__container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
   &__title {
     margin: 0;
     @extend %item-title;
@@ -93,10 +93,25 @@
       grid-column: 1;
       justify-self: center;
     }
+
+    &-title {
+      margin: 0 0 22px;
+    }
   }
 
-  &__about-room-title {
-    margin: 0 0 22px;
+  &__rating {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 2 / 3;
+      grid-column: 1;
+      justify-self: center;
+    }
+
+    &-title {
+      margin: 0 0 20px;
+    }
   }
 
   &__reviews {
@@ -131,11 +146,6 @@
     text-align: center;
   }
 
-  &__bullet-list-title {
-    margin-bottom: 18px;
-    padding-left: 20px;
-  }
-
   &__bullet-list {
     grid-row: 3 / 4;
     grid-column: 1 / 2;
@@ -143,6 +153,11 @@
     @media screen and (max-width: $phoneWidth) {
       grid-row: 5 / 6;
       grid-column: 1;
+    }
+
+    &-title {
+      margin-bottom: 18px;
+      padding-left: 20px;
     }
   }
 
@@ -155,30 +170,15 @@
       grid-row: 4 / 5;
       grid-column: 1;
     }
-  }
-
-  &__cancel-title {
-    margin: 0 0 20px;
-  }
-
-  &__cancel-text {
-    margin: 0;
-    line-height: $largeLineHeight;
-    @extend %body-text;
-  }
-
-  &__rating {
-    grid-row: 1 / 2;
-    grid-column: 2 / 3;
-
-    @media screen and (max-width: $phoneWidth) {
-      grid-row: 2 / 3;
-      grid-column: 1;
-      justify-self: center;
-    }
 
     &-title {
       margin: 0 0 20px;
+    }
+
+    &-text {
+      margin: 0;
+      line-height: $largeLineHeight;
+      @extend %body-text;
     }
   }
 
