--- a/src/pages/search-room/search-room.scss
+++ b/src/pages/search-room/search-room.scss
@@ -39,18 +39,18 @@
     margin-bottom: 26px;
   }
 
-  &__checkbox-title {
-    display: inline-block;
-    margin-bottom: 18px;
-    @extend %label-text;
-  }
-
   &__checkbox {
     max-width: 223px;
     margin-bottom: 30px;
 
     &:nth-child(5) {
       max-width: 260px;
+    }
+
+    &-title {
+      display: inline-block;
+      margin-bottom: 18px;
+      @extend %label-text;
     }
 
     &-wrapper {
@@ -68,14 +68,14 @@
     margin-bottom: 25px;
   }
 
-  &__title {
-    margin: 0 0 20px;
-    @extend %sub-section-title;
-  }
-
   &__search-results {
     grid-area: content;
     width: 100%;
+  }
+
+  &__title {
+    margin: 0 0 20px;
+    @extend %sub-section-title;
   }
 
   &__room-cards {
