--- a/src/components/header-menu/header-menu.scss
+++ b/src/components/header-menu/header-menu.scss
@@ -61,7 +61,7 @@
     left: 50%;
     z-index: 2;
     display: none;
-    width: 120px;
+    width: 100%;
     margin: 0;
     padding: 0 5px 10px;
     list-style: none;
