--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -24,7 +24,7 @@ block content
           +reservation-form({
             luxury: true,
             room: 888,
-            price: "9 990₽",
+            price: "9 990",
             discount: "2&nbsp;179",
             additionalService: "300"
           })
