add default value

--- a/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
+++ b/src/components/expandable-checkbox-list/expandable-checkbox-list.pug
@@ -1,4 +1,4 @@
-mixin expandable-checkbox-list({ label, list, container, expanded })
+mixin expandable-checkbox-list({ label, list, container, expanded = false })
   .expandable-checkbox-list(class=container)
     .expandable-checkbox-list__wrapper.js-expandable-checkbox-list__wrapper
       span.expandable-checkbox-list__label= label
