--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -4,4 +4,4 @@ mixin logo(text)
       if (text)
         img(class="logo__img" src=require("/src/assets/img/icons/logo.svg"), alt="logo")
       else
-        img(src=require("/src/assets/img/icons/ui-logo.svg"), alt="logo")
+        img(class="logo__img" src=require("/src/assets/img/icons/ui-logo.svg"), alt="logo")
