--- a/src/components/review/review.pug
+++ b/src/components/review/review.pug
@@ -3,11 +3,13 @@ mixin review(obj)
   -const {src, name, time, comment, likes, liked} = obj
   .review.js-review
     img(class="review__img", src=src, alt="ava")
-    span.review__name
-      =name
-    time.review__time
-      =time
-    +button-like(likes, liked)
+    .review__author
+      span.review__name
+        =name
+      time.review__time
+        =time
+    .review__button
+      +button-like(likes, liked)
     p.review__comment
       !=comment
 
