--- a/src/components/review/review.scss
+++ b/src/components/review/review.scss
@@ -15,9 +15,14 @@
     filter: drop-shadow(0px 10px 20px rgba(31, 32, 65, 0.1));
   }
 
-  &__name {
-    grid-row: 1 / 2;
+  &__author {
+    grid-row: 1 / 3;
     grid-column: 2 / 3;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__name {
     color: $dark-shade-75;
     font-weight: $boldFontWeight;
     font-size: $mainFontSize;
@@ -26,9 +31,13 @@
   }
 
   &__time {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
     @extend %body-text;
+  }
+
+  &__button {
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+    justify-self: center;
   }
 
   &__comment {
