--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -4,6 +4,7 @@ mixin dropdown(obj)
     p.dropdown__label= label
     .dropdown__header.js-dropdown__header(class=`${expanded && 'dropdown__header_active'}`)
       input(class="dropdown__input js-dropdown__input" readonly placeholder=holder type='text')
+      input(class="dropdown__input js-dropdown__input" readonly placeholder=placeholder type='text' name=name)
       button(class="dropdown__button-expand" type="button") expand_more
     .dropdown__inner.js-dropdown__inner(class=`${expanded && 'dropdown__inner_active'}`)
       ul(class="dropdown__list")
